--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<div id="principal">
 			<header>
 				<div id="logo">
-					<h2 class="titulo">Restaurant Elkin</h2>
+					<h2 class="titulo">Restaurante Elkin</h2>
 
 					<p class="sub-titulo">comidas rapidas</p>
 				</div>
@@ -50,8 +50,8 @@
 					<img src="img/hotdog.png" width="250" height="150" >
 					<h2>Hot dog</h2>
 					<p class="parrafo">
-						Hot-dog una salchica hervida cubierta con pan y encima  con aderezos. <br/> 
-						Precio : 2.00 $
+						Hot-dog una salchicha hervida cubierta con pan y encima  con aderezos. <br/> 
+						Precio : 1.25 $
 					</p>
 					<a href="" class="leer-mas"></a><br><br>
 				</section>
@@ -61,6 +61,8 @@
 					<p class="parrafo">
 						2 tipos de hamburguesas :
 						sencilla y especial.
+						Precio : 1.00 $ 
+						Precio : 2.00 $ 
 
 					</p>
 					<a href="" class="leer-mas"></a><br><br>
@@ -70,6 +72,7 @@
 					<h2>Pan de yuca</h2>
 					<p class="parrafo">
 						Rico pan de yuca con un sabor expectacular a un precio modico por unidad.
+						Precio : 0.15 $ 
 					</p>
 					<a href="" class="leer-mas"></a><br><br>
 					</section>
@@ -78,6 +81,7 @@
 					<h2>Batidos</h2>
 					<p class="parrafo">
 						Batidos de frutilla, mora y durazno ofrcemos a nuestros clientes.
+						 
 					</p>
 					<a href="" class="parrafos">Leer más</a><br><br>
 					
@@ -91,7 +95,7 @@
 						<h2>Restaurante Elkin</h2>
 					<p class="parrafo">
 						<br/>
-						<br/>Nuestro restaurant cuenta con una amplia variedad de comidas rapidas, 
+						<br/>Nuestro restaurante cuenta con una amplia variedad de comidas rapidas, 
 						tenemos una buena ubicacion en el sector el cual nos permite ser reconocido 
 						rapidamente por los clientes, nuestros precios son muy modicos lo cual hace 
 						que tengamos una buena acogida.
