--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<div id="principal">
 			<header>
 				<div id="logo">
-					<h2 class="titulo">Restaurante Elkin</h2>
+					<h2 class="titulo">Restaurant Elkin</h2>
 
 					<p class="sub-titulo">comidas rapidas</p>
 				</div>
