--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</header>
 
 			<section id="slide">
-				<img src="img/Elkin.png" width="700" height="250">
+				<img src="img/elkin.png" width="700" height="250">
 			</section>
 
 			<section id="categorias">
